<resources>
    <string name="app_name">PVPN LEARNING APP</string>
    <string name="surf">Surf the web worry free!</string>
    <string name="free_vpn">Free VPN for Everybody!</string>
    <string name="usernameHint">USERNAME</string>
    <string name="passwordHint">PASSWORD</string>
    <string name="shieldDescription">shield</string>
    <string name="chooseUsername">Please choose a username</string>
    <string name="signUp">SIGN UP</string>
    <string name="enterEmailText">Enter Email</string>
    <string name="example_hint">example@email.com</string>
    <string name="reenterEmailText">Re-enter Email</string>
    <string name="confirmPS">Confirm your password!</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="now">sign up now!</string>
    <string name="secure">SECURE ME!</string>
    <string name="vpn_button">button</string>
    <string name="welcome_pvpn">PVPN LEARNING APP</string>
    <string name="landing_page_qoute">This app protects, and empower you with cyber security knowledge</string>
    <string name="free">Its Free!!</string>
    <string name="fragmentAdds">Blocked Adds</string>
    <string name="fragmentHome">Home</string>
    <string name="fragmentLearn">Educate</string>
    <string name="fragmentQuiz">Challenge</string>
    <string name="your_protected">You are Protected</string>
    <string name="location">current location</string>
    <string name="know_more">Know more about cyber security and challenge your knowledge about it</string>
    <string name="ring_description">ring</string>
    <string name="half_circle">half circle</string>
    <string name="turn_now">Turn VPN ON now!</string>
    <string name="blockedAdds">Check your blocked adds here<a href="https://www.oakland.edu/" /></string>
    <string name="usernameSignUp">USERNAME</string>
    <string name="get_time">%d%02d%02d%02d%02d%02d%03d</string>
    <string name="Buzz">Buzz</string>
    <string name="VPN">VPN</string>
    <string name="ChicagoIL">Chicago IL</string>
    <string name="Title">Update Your VPN App</string>
    <string name="Description">A newer version 1.0.4 is available for download with enhanced features, and fewer bugs</string>
    <string name="Cancel">Got it</string>
    <string name="Update">Update</string>
    <string name="connect">Connect</string>
    <string name="connected">Disconnect</string>
    <string name="error1">Error</string>
    <string name="connecting">Connecting</string>
    <string name="initing">Initing&#8230;</string>
    <string name="help">About</string>
    <string name="init_fail">init failed: </string>
    <string name="down_fail">load data failed: </string>
    <string name="not_show_more">Not show more</string>
    <string name="remove_vpn_query">Remove the VPN Profile \'%s\'?</string>
    <string name="app_is_starting">app is starting</string>
    <string name="creating_notification_channel">creating notification</string>
    <string name="check_internet_connection">checking internet connection</string>
    <string name="internet_is_available">internet_is_available</string>
    <string name="internet_is_not_available">internet is not available</string>
    <string name="getting_app_details">getting details</string>
    <string name="getting_app_details_completed">getting details completed</string>
    <string name="getting_connection_details">establishing connection</string>
    <string name="getting_connection_details_completed">establishing connection completed</string>
    <string name="establishing_vpn_connection">establishing vpn</string>
    <string name="establishing_vpn_connection_completed">establishing vpn completed</string>
    <string name="please_wait">wait</string>
    <string name="auth_username">Username</string>
    <string name="no_keystore_cert_selected">You must select a User certificate</string>
    <string name="no_ca_cert_selected">You must select a CA certificate</string>
    <string name="no_error_found">No error found</string>
    <string name="config_error_found">Error in Configuration</string>
    <string name="ipv4_format_error">Error parsing the IPv4 address</string>
    <string name="custom_route_format_error">Error parsing the custom routes</string>
    <string name="vpn_launch_title">Connecting to VPN…</string>
    <string name="shortcut_profile_notfound">Profile specified in shortcut not found</string>
    <string name="route_rejected">Route rejected by Android</string>
    <string name="tun_error_helpful">On some custom ICS images the permission on /dev/tun might be wrong, or the tun module might be missing completely. For CM9 images try the fix ownership option under general settings</string>
    <string name="tun_open_error">Failed to open the tun interface</string>
    <string name="error">"Error: "</string>
    <string name="last_openvpn_tun_config">Opening tun interface:</string>
    <string name="local_ip_info">Local IPv4: %1$s/%2$d IPv6: %3$s MTU: %4$d</string>
    <string name="dns_server_info">DNS Server: %1$s, Domain: %2$s</string>
    <string name="routes_info_incl">Routes: %1$s %2$s</string>
    <string name="routes_info_excl">Routes excluded: %1$s %2$s</string>
    <string name="routes_debug">VpnService routes installed: %1$s %2$s</string>
    <string name="ip_not_cidr">Got interface information %1$s and %2$s, assuming second address is peer address of remote. Using /32 netmask for local IP. Mode given by OpenVPN is \"%3$s\".</string>
    <string name="route_not_cidr">Cannot make sense of %1$s and %2$s as IP route with CIDR netmask, using /32 as netmask.</string>
    <string name="route_not_netip">Corrected route %1$s/%2$s to %3$s/%2$s</string>
    <string name="keychain_access">Cannot access the Android Keychain Certificates. This can be caused by a firmware upgrade or by restoring a backup of the app/app settings. Please edit the VPN and reselect the certificate under basic settings to recreate the permission to access the certificate.</string>
    <string name="no_vpn_support_image">Your image does not support the VPNService API, sorry :(</string>
    <string name="opentun_no_ipaddr">Refusing to open tun device without IP information</string>
    <string name="pkcs12_file_encryption_key">PKCS12 File Encryption Key</string>
    <string name="private_key_password">Private Key Password</string>
    <string name="password">Password</string>
    <string name="building_configration">configuring settings</string>
    <string name="netstatus">Network Status: %s</string>
    <string name="keychain_nocacert">No CA Certificate returned while reading from Android keystore. Authentication will probably fail.</string>
    <string name="mobile_info">%10$s %9$s running on %3$s %1$s (%2$s), Android %6$s (%7$s) API %4$d, ABI %5$s, (%8$s)</string>
    <string name="error_rsa_sign">Error signing with Android keystore key %1$s: %2$s</string>
    <string name="warn_no_dns">No DNS servers being used. Name resolution may not work. Consider setting custom DNS Servers. Please also note that Android will keep using your proxy settings specified for your mobile/Wi-Fi connection when no DNS servers are set.</string>
    <string name="dns_add_error">Could not add DNS Server \"%1$s\", rejected by the system: %2$s</string>
    <string name="ip_add_error">Could not configure IP Address \"%1$s\", rejected by the system: %2$s</string>
    <string name="getproxy_error">Error getting proxy settings: %s</string>
    <string name="using_proxy">Using proxy %1$s %2$d</string>
    <string name="minidump_generated">OpenVPN crashed unexpectedly. Please consider using the send Minidump option in the main menu</string>
    <string name="notifcation_title">%1$s - %2$s</string>
    <string name="session_ipv4string">%1$s - %2$s</string>
    <string name="session_ipv6string">%1$s - %3$s, %2$s</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_wait">server is waiting</string>
    <string name="state_auth">getting the server</string>
    <string name="state_get_config">setting up configuration</string>
    <string name="your_app_version">App Version </string>
    <string name="latest_update">Latest update </string>
    <string name="state_assign_ip">Assigning IP addresses</string>
    <string name="state_add_routes">Adding routes</string>
    <string name="state_connected">Connected</string>
    <string name="state_disconnected">Disconnect</string>
    <string name="state_reconnecting">Reconnecting</string>
    <string name="state_exiting">Exiting</string>
    <string name="state_noprocess">Not running</string>
    <string name="state_resolve">Resolving host names</string>
    <string name="state_tcp_connect">Connecting (TCP)</string>
    <string name="state_auth_failed">Authentication failed</string>
    <string name="state_nonetwork">slow internet connection</string>
    <string name="statusline_bytecount">↓:%2$s(%1$s)-↑:%4$s(%3$s)</string>
    <string name="notifcation_title_notconnect">Not connected</string>
    <string name="jelly_keystore_alphanumeric_bug">Some versions of Android 4.1 have problems if the name of the keystore certificate contains non alphanumeric characters (like spaces, underscores or dashes). Try to reimport the certificate without special characters</string>
    <string name="built_by">built by %s</string>
    <string name="debug_build">debug build</string>
    <string name="official_build">official build</string>
    <string name="prompt">%1$s attempts to control %2$s</string>
    <string name="remote_warning">By proceeding, you are giving the application permission to completely control OpenVPN for Android and to intercept all network traffic.<b>Do NOT accept unless you trust the application.</b> Otherwise, you run the risk of having your data compromised by malicious software."</string>
    <string name="remote_trust">I trust this application.</string>
    <string name="screenoff_pause">Pausing connection in screen off state: less than %1$s in %2$ss</string>
    <string name="screen_nopersistenttun">Warning: Persistent tun not enabled for this VPN. Traffic will use the normal Internet connection when the screen is off.</string>
    <string name="save_password">Save Password</string>
    <string name="state_userpause">VPN pause requested by user</string>
    <string name="state_screenoff">VPN paused - screen off</string>
    <string name="cannotparsecert">Cannot display certificate information</string>
    <string name="permission_icon_app">Icon of app trying to use OpenVPN for Android</string>
    <string name="show_password">Show password</string>
    <string name="keyChainAccessError">KeyChain Access error: %s</string>
    <string name="unhandled_exception">Unhandled exception: %1$s\n\n%2$s</string>
    <string name="unhandled_exception_context">%3$s: %1$s\n\n%2$s</string>
    <string name="ip_looks_like_subnet">Vpn topology \"%3$s\" specified but ifconfig %1$s %2$s looks more like an IP address with a network mask. Assuming \"subnet\" topology.</string>
    <string name="allowed_vpn_apps_info">Allowed VPN apps: %1$s</string>
    <string name="disallowed_vpn_apps_info">Disallowed VPN apps: %1$s</string>
    <string name="app_no_longer_exists">Package %s is no longer installed, removing it from app allow/disallow list</string>
    <string name="remote_no_server_selected">You need to define and enable at least one remote server.</string>
    <string name="ignore_multicast_route">Ignoring multicast route: %s</string>
    <string name="service_restarted">Restarting OpenVPN Service (App crashed probably crashed or killed for memory pressure)</string>
    <string name="no_allowed_app">No allowed app added. Adding ourselves (%s) to have at least one app in the allowed app list to not allow all apps</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="start">Start</string>
</resources>