<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".landing_page"
    android:background="#FFFFFF"
    android:id="@+id/landing_page"
    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:srcCompat="@drawable/shield_main"
            android:layout_gravity="center"
            android:contentDescription="@string/shieldDescription"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/welcome_pvpn"
            android:textSize="35sp"
            android:textColor="#0D0D0D"
            android:gravity="center"
            android:layout_marginTop="160dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:text="@string/landing_page_qoute"
            android:textSize="24sp"
            android:textColor="#0D0D0D"
            android:gravity="center"
            android:layout_marginTop="200dp"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="@string/free"
            android:textSize="23sp"
            android:textColor="#0D0D0D"
            android:gravity="center"
            android:layout_marginTop="410dp"

            />

        <Button
            android:id="@+id/signup_button"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="180dp"
            android:background="@drawable/btn_bkgrd"
            android:text="@string/start"
            app:layout_constraintEnd_toEndOf="@+id/or"
            app:layout_constraintStart_toStartOf="@+id/or"
            app:layout_constraintTop_toBottomOf="@+id/or" />

    </FrameLayout>




</androidx.coordinatorlayout.widget.CoordinatorLayout>