<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home"
    android:background="@color/colorWhite">



    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation_bar"
        android:layout_marginBottom="-1dp"
        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:src="@drawable/half_circle"
            android:contentDescription="@string/half_circle"
            />
        <ImageButton
            android:id="@+id/vpn_image_button"
            android:layout_width="180dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:background="@color/colorWhite"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/power_button"
            android:contentDescription="@string/vpn_button"/>
        <ImageView
            android:id="@+id/ring_vpn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/vpn_ring"
            android:contentDescription="@string/ring_description"/>

        <TextView
            android:id="@+id/protected_on"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_protected"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="130dp"
            android:textSize="35sp"
            android:textColor="#000000"
            android:fontFamily="@font/abel"/>
        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_gravity="center"
            android:layout_marginTop="170dp"
            android:textSize="25sp"
            android:textColor="#000000"
            android:background="@drawable/btn_bkgrd"
            android:textStyle="bold"
            android:fontFamily="@font/abel"
            />

        <TextView
            android:id="@+id/blockedAdds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blockedAdds"
            android:layout_gravity="center"
            android:layout_marginTop="210dp"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/learn_add"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_bkgrd"
            android:paddingLeft="50dp"
            android:paddingTop="15dp"
            android:text="@string/know_more"
            android:textColor="#000000"
            android:textSize="20sp"
            android:fontFamily="@font/abel"
            android:textStyle="bold"
            android:visibility="visible" />

     </FrameLayout>



    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/round_corners"
        android:elevation="2dp"
        app:itemIconTint="@drawable/item_selector"
        app:menu="@menu/item_menu"
        />

</RelativeLayout>